--- a/TFT_Test/TFT_Test.vcxproj
+++ b/TFT_Test/TFT_Test.vcxproj
@@ -107,6 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>D:\My Documents\My Projects\TFT_Test\TFT_Test\tft;D:\My Documents\My Projects\TFT_Test\TFT_Test\Font;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -204,6 +205,7 @@
     <ClCompile Include="Font\pFont_15_cyr.c" />
     <ClCompile Include="Font\sevenseg_num_32x50.c" />
     <ClCompile Include="Font\sevenseg_num_64x100.c" />
+    <ClCompile Include="GUI\GUI.cpp" />
     <ClCompile Include="tft\display_wnd.cpp" />
     <ClCompile Include="tft\TFT_Lib.cpp" />
     <ClCompile Include="tft\win32_drv.cpp" />
@@ -211,6 +213,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Font\Font.h" />
+    <ClInclude Include="GUI\GUI.h" />
     <ClInclude Include="tft\COLOR_RGB565.h" />
     <ClInclude Include="tft\display_wnd.h" />
     <ClInclude Include="tft\TFT_Lib.h" />
